增加redis连接
